[package]
name = "migo-hqm-server"
version = "1.8.0"
authors = ["John Eriksson <john.eriksson.16@gmail.com>"]
edition = "2018"

[dependencies]

arr_macro = "0.2.1"
nalgebra = "0.32"
tokio = { version = "1.29", features = ["net", "time", "macros", "rt-multi-thread", "sync", "fs", "parking_lot"] }
rust-ini = "0.18" # INI For configuration
bytes = "1.4"
reqwest = { version = "0.11", features = ["multipart", "json", "blocking"] }
tracing = "0.1.37"
tracing-subscriber = {version="0.3", features = ["parking_lot"]}
tracing-appender = "0.2"
chrono = "0.4"
uuid = { version = "1.4", features = ["v4"] }
smallvec = { version = "1.11", features = ["union", "const_generics"]}
systemctl = "0.1.9"
md5 = "0.7.0"
rand = "0.8"
itertools = "0.10.3"
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5.2"

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3
